# reml

./: .credo.exs  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  dockerfile  makefile  mix.exs
agents/: foo.agent  foo.ex  square.agent  square.ex  state.agent  state.ex  sum.agent  sum.ex
agents/predictor/: predictor.agent
config/: config.exs
docker/: dockerfile
docker/gpu/: Dockerfile
examples/: add.pb  add.py  graph.pb  graph.py  square.pb  square.py
examples/inception/: jpg_to_csv.py  panda.csv
examples/mnist_keras/: data.py  image_to_mnist.py  model.h5  model.py  train_test.py
fs/predictor/: dockerfile  requirements.txt
lib/: docker.ex  pallium.ex  reml.ex
lib/pallium/: application.ex  helpers.ex
lib/reml/: application.ex  helpers.ex
priv/: flow_api.py
priv/reml-ps/: client.exs  dockerfile  generate-ex.exs  makefile  reml-ps.thrift  rms.py  service.ex  test.ex  weights
priv/tendermint/: config.toml  genesis.json
priv/tools/: cv.py  np.py
pvm/: Cargo.toml  README.md
python/: img_to_vector.py  requirements.txt
rel/: config.exs
src/: agent.rs  agents.rs  app.rs  main.rs  pvm.rs  store.rs  transaction.rs  vm.rs
test/: agent_test.exs  channel_test.exs  env_test.exs  examples_test.exs  flow_test.exs  message_test.exs  pallium_test.exs  store_test.exs  test_helper.exs  transaction_test.exs
test/agents/: predict_test.exs
test/core/: agent_controller_test.exs  agent_state_test.exs  agent_test.exs  message_test.exs  store_test.exs  transaction_controller_test.exs  transaction_test.exs  (+1 more)
(+156 files in other folders)
