[package]
name = "pallium"
version = "0.1.0"
authors = [
    "Anton Zhuravlev <froggrog@hotmail.com>"
    ]

[[bin]]
name = "pallium"
path = "src/main.rs"

[dependencies]
abci-rs = { git = "https://github.com/neocortexlab/abci-rs" }
clap = "^2.31.2"
log = "0.4.1"
fern = "0.5.5"
failure = "0.1.1"
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13"
hex = "0.3.1"
leveldb = "0.8"
db-key = "0.0.5"
rand = "0.3.0"
tiny-keccak = "1.0"
sha2 = "0.7.0"
ed25519-dalek = "0.6.2"
rlp = "0.2.1"
lazy_static = "1.0.0"
